# gxml-houdini

./: .gitignore  README.md  gxml-houdini.json  pyproject.toml
otls/: sop_modavi.layout_regions.1.0.hda
src/gxml_houdini/: __init__.py  gxml_engine.py  gxml_render.py
src/gxml_houdini/render_engines/: __init__.py  houdini_render_context.py
